--- a/Student/package.json
+++ b/Student/package.json
@@ -3,17 +3,453 @@
   "version": "1.0.0",
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 16.0.1.",
   "main": "index.js",
+  "dependencies": {
+    "@angular/cli": "^16.1.5",
+    "@angular/forms": "^16.1.6",
+    "@angular/platform-browser-dynamic": "^16.1.6",
+    "@angular/router": "^16.1.6",
+    "abab": "^2.0.6",
+    "accepts": "^1.3.8",
+    "acorn": "^8.10.0",
+    "acorn-import-assertions": "^1.9.0",
+    "adjust-sourcemap-loader": "^4.0.0",
+    "agent-base": "^6.0.2",
+    "aggregate-error": "^3.1.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "ajv-keywords": "^5.1.0",
+    "ansi-colors": "^4.1.3",
+    "ansi-escapes": "^4.3.2",
+    "ansi-html-community": "^0.0.8",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.3",
+    "argparse": "^1.0.10",
+    "array-flatten": "^2.1.2",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-polyfill-corejs2": "^0.4.5",
+    "babel-plugin-polyfill-corejs3": "^0.8.3",
+    "babel-plugin-polyfill-regenerator": "^0.5.2",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "batch": "^0.6.1",
+    "big.js": "^5.2.2",
+    "binary-extensions": "^2.2.0",
+    "bl": "^4.1.0",
+    "body-parser": "^1.20.1",
+    "bonjour-service": "^1.1.1",
+    "boolbase": "^1.0.0",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.9",
+    "buffer": "^5.7.1",
+    "buffer-from": "^1.1.2",
+    "bytes": "^3.0.0",
+    "cacache": "^17.1.3",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001517",
+    "chalk": "^2.4.2",
+    "chardet": "^0.7.0",
+    "chokidar": "^3.5.3",
+    "chownr": "^2.0.0",
+    "chrome-trace-event": "^1.0.3",
+    "clean-stack": "^2.2.0",
+    "cli-cursor": "^3.1.0",
+    "cli-spinners": "^2.9.0",
+    "cli-width": "^3.0.0",
+    "cliui": "^8.0.1",
+    "clone": "^1.0.4",
+    "clone-deep": "^4.0.1",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colorette": "^2.0.20",
+    "commander": "^2.20.3",
+    "commondir": "^1.0.1",
+    "compressible": "^2.0.18",
+    "compression": "^1.7.4",
+    "concat-map": "^0.0.1",
+    "connect-history-api-fallback": "^2.0.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "convert-source-map": "^1.9.0",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "copy-anything": "^2.0.6",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js-compat": "^3.31.1",
+    "core-util-is": "^1.0.3",
+    "cosmiconfig": "^8.2.0",
+    "critters": "^0.0.19",
+    "cross-spawn": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "css-select": "^5.1.0",
+    "css-what": "^6.1.0",
+    "cssesc": "^3.0.0",
+    "debug": "^4.3.4",
+    "default-gateway": "^6.0.3",
+    "defaults": "^1.0.4",
+    "define-lazy-prop": "^2.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "detect-node": "^2.1.0",
+    "dir-glob": "^3.0.1",
+    "dns-equal": "^1.0.0",
+    "dns-packet": "^5.6.0",
+    "dom-serializer": "^2.0.0",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^5.0.3",
+    "domutils": "^3.1.0",
+    "eastasianwidth": "^0.2.0",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.4.467",
+    "emoji-regex": "^8.0.0",
+    "emojis-list": "^3.0.0",
+    "encodeurl": "^1.0.2",
+    "enhanced-resolve": "^5.15.0",
+    "entities": "^4.5.0",
+    "errno": "^0.1.8",
+    "error-ex": "^1.3.2",
+    "es-module-lexer": "^1.3.0",
+    "esbuild": "^0.17.19",
+    "esbuild-wasm": "^0.17.19",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-scope": "^5.1.1",
+    "esprima": "^4.0.1",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "eventemitter-asyncresource": "^1.0.0",
+    "eventemitter3": "^4.0.7",
+    "events": "^3.3.0",
+    "execa": "^5.1.1",
+    "express": "^4.18.2",
+    "external-editor": "^3.1.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.2.12",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fastq": "^1.15.0",
+    "faye-websocket": "^0.11.4",
+    "figures": "^3.2.0",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "find-cache-dir": "^3.3.2",
+    "find-up": "^4.1.0",
+    "follow-redirects": "^1.15.2",
+    "foreground-child": "^3.1.1",
+    "forwarded": "^0.2.0",
+    "fraction.js": "^4.2.0",
+    "fresh": "^0.5.2",
+    "fs-minipass": "^3.0.2",
+    "fs-monkey": "^1.0.4",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.2.1",
+    "get-package-type": "^0.1.0",
+    "get-stream": "^6.0.1",
+    "glob": "^10.3.3",
+    "glob-parent": "^5.1.2",
+    "glob-to-regexp": "^0.4.1",
+    "globals": "^11.12.0",
+    "globby": "^13.2.2",
+    "graceful-fs": "^4.2.11",
+    "handle-thing": "^2.0.1",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "hdr-histogram-js": "^2.0.3",
+    "hdr-histogram-percentiles-obj": "^3.0.0",
+    "hpack.js": "^2.1.6",
+    "html-entities": "^2.4.0",
+    "htmlparser2": "^8.0.2",
+    "http-deceiver": "^1.2.7",
+    "http-errors": "^2.0.0",
+    "http-parser-js": "^0.5.8",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
+    "https-proxy-agent": "^5.0.1",
+    "human-signals": "^2.1.0",
+    "iconv-lite": "^0.4.24",
+    "icss-utils": "^5.1.0",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.2.4",
+    "image-size": "^0.5.5",
+    "immutable": "^4.3.1",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "inquirer": "^8.2.4",
+    "ipaddr.js": "^2.1.0",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^2.1.0",
+    "is-core-module": "^2.12.1",
+    "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-interactive": "^1.0.0",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^3.0.0",
+    "is-plain-object": "^2.0.4",
+    "is-stream": "^2.0.1",
+    "is-unicode-supported": "^0.1.0",
+    "is-what": "^3.14.1",
+    "is-wsl": "^2.2.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-instrument": "^5.2.1",
+    "jackspeak": "^2.2.1",
+    "jest-worker": "^27.5.1",
+    "jiti": "^1.19.1",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsesc": "^2.5.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^1.0.0",
+    "json5": "^2.2.3",
+    "jsonc-parser": "^3.2.0",
+    "karma-source-map-support": "^1.4.0",
+    "kind-of": "^6.0.3",
+    "klona": "^2.0.6",
+    "launch-editor": "^2.6.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "license-webpack-plugin": "^4.0.2",
+    "lines-and-columns": "^1.2.4",
+    "loader-runner": "^4.3.0",
+    "loader-utils": "^3.2.1",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "log-symbols": "^4.1.0",
+    "lru-cache": "^5.1.1",
+    "magic-string": "^0.30.0",
+    "make-dir": "^3.1.0",
+    "media-typer": "^0.3.0",
+    "memfs": "^3.5.3",
+    "merge-descriptors": "^1.0.1",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "methods": "^1.1.2",
+    "micromatch": "^4.0.5",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "minimalistic-assert": "^1.0.1",
+    "minimatch": "^9.0.3",
+    "minipass": "^5.0.0",
+    "minipass-collect": "^1.0.2",
+    "minipass-flush": "^1.0.5",
+    "minipass-pipeline": "^1.2.4",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "mrmime": "^1.0.1",
+    "ms": "^2.1.2",
+    "multicast-dns": "^7.2.5",
+    "mute-stream": "^0.0.8",
+    "nanoid": "^3.3.6",
+    "needle": "^3.2.0",
+    "negotiator": "^0.6.3",
+    "neo-async": "^2.6.2",
+    "node-forge": "^1.3.1",
+    "node-releases": "^2.0.13",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "npm-run-path": "^4.0.1",
+    "nth-check": "^2.1.1",
+    "object-inspect": "^1.12.3",
+    "obuf": "^1.1.2",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "open": "^8.4.2",
+    "ora": "^5.4.1",
+    "os-tmpdir": "^1.0.2",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-map": "^4.0.0",
+    "p-retry": "^4.6.2",
+    "p-try": "^2.2.0",
+    "pako": "^1.0.11",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "parse-node-version": "^1.0.1",
+    "parse5": "^7.1.2",
+    "parse5-html-rewriting-stream": "^7.0.0",
+    "parse5-sax-parser": "^7.0.0",
+    "parseurl": "^1.3.3",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-scurry": "^1.10.1",
+    "path-to-regexp": "^0.1.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pify": "^4.0.1",
+    "piscina": "^3.2.0",
+    "pkg-dir": "^4.2.0",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.2",
+    "postcss-modules-extract-imports": "^3.0.0",
+    "postcss-modules-local-by-default": "^4.0.3",
+    "postcss-modules-scope": "^3.0.0",
+    "postcss-modules-values": "^4.0.0",
+    "postcss-selector-parser": "^6.0.13",
+    "postcss-value-parser": "^4.2.0",
+    "pretty-bytes": "^5.6.0",
+    "process-nextick-args": "^2.0.1",
+    "proxy-addr": "^2.0.7",
+    "prr": "^1.0.1",
+    "punycode": "^2.3.0",
+    "qs": "^6.11.0",
+    "queue-microtask": "^1.2.3",
+    "randombytes": "^2.1.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readable-stream": "^3.6.2",
+    "readdirp": "^3.6.0",
+    "reflect-metadata": "^0.1.13",
+    "regenerate": "^1.4.2",
+    "regenerate-unicode-properties": "^10.1.0",
+    "regenerator-runtime": "^0.13.11",
+    "regenerator-transform": "^0.15.1",
+    "regex-parser": "^2.2.11",
+    "regexpu-core": "^5.3.2",
+    "regjsparser": "^0.9.1",
+    "require-directory": "^2.1.1",
+    "require-from-string": "^2.0.2",
+    "requires-port": "^1.0.0",
+    "resolve": "^1.22.2",
+    "resolve-from": "^5.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "restore-cursor": "^3.1.0",
+    "retry": "^0.13.1",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.26.3",
+    "run-async": "^2.4.1",
+    "run-parallel": "^1.2.0",
+    "rxjs": "^7.8.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "safevalues": "^0.3.4",
+    "sass": "^1.63.2",
+    "sass-loader": "^13.3.1",
+    "sax": "^1.2.4",
+    "schema-utils": "^4.2.0",
+    "select-hose": "^2.0.0",
+    "selfsigned": "^2.1.1",
+    "semver": "^7.5.3",
+    "send": "^0.18.0",
+    "serialize-javascript": "^6.0.1",
+    "serve-index": "^1.9.1",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "shallow-clone": "^3.0.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "shell-quote": "^1.8.1",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^4.0.2",
+    "slash": "^4.0.0",
+    "sockjs": "^0.3.24",
+    "source-map": "^0.7.4",
+    "source-map-js": "^1.0.2",
+    "source-map-loader": "^4.0.1",
+    "source-map-support": "^0.5.21",
+    "spdy": "^4.0.2",
+    "spdy-transport": "^3.0.0",
+    "sprintf-js": "^1.0.3",
+    "ssri": "^10.0.4",
+    "statuses": "^2.0.1",
+    "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-ansi-cjs": "^6.0.1",
+    "strip-final-newline": "^2.0.0",
+    "supports-color": "^5.5.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tapable": "^2.2.1",
+    "tar": "^6.1.15",
+    "terser": "^5.17.7",
+    "terser-webpack-plugin": "^5.3.9",
+    "test-exclude": "^6.0.0",
+    "text-table": "^0.2.0",
+    "through": "^2.3.8",
+    "thunky": "^1.1.0",
+    "tmp": "^0.0.33",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "tree-kill": "^1.2.2",
+    "tslib": "^2.6.0",
+    "type-fest": "^0.21.3",
+    "type-is": "^1.6.18",
+    "typed-assert": "^1.0.9",
+    "typescript": "^5.1.6",
+    "unicode-canonical-property-names-ecmascript": "^2.0.0",
+    "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.1.0",
+    "unicode-property-aliases-ecmascript": "^2.1.0",
+    "unique-filename": "^3.0.0",
+    "unique-slug": "^4.0.0",
+    "unpipe": "^1.0.0",
+    "update-browserslist-db": "^1.0.11",
+    "uri-js": "^4.4.1",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^8.3.2",
+    "vary": "^1.1.2",
+    "vite": "^4.3.9",
+    "watchpack": "^2.4.0",
+    "wbuf": "^1.7.3",
+    "wcwidth": "^1.0.1",
+    "webpack": "^5.86.0",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-dev-server": "^4.15.0",
+    "webpack-merge": "^5.9.0",
+    "webpack-sources": "^3.2.3",
+    "webpack-subresource-integrity": "^5.1.0",
+    "websocket-driver": "^0.7.4",
+    "websocket-extensions": "^0.1.4",
+    "which": "^2.0.2",
+    "wildcard": "^2.0.1",
+    "wrap-ansi": "^7.0.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.13.0",
+    "y18n": "^5.0.8",
+    "yallist": "^3.1.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "zone.js": "^0.13.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@angular-devkit/build-angular": "^16.1.5",
-    "@angular/cdk": "^16.1.5",
-    "@angular/material": "^16.1.5",
-    "@angular/platform-browser": "^16.1.6"
-  },
-  "devDependencies": {}
+  "keywords": [],
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^16.1.5"
+  }
 }
